@@ -5,6 +5,7 @@ Version 1.2.5
 - added catalog export to HTML (Christophe Hermier)
 - fixed bug in displaying list entries in ANSI build introduced in 1.2.4
 - fixed opening of source files specified using absolute path
+- poEdit now preserves fuzzy status if set after partially editing an entry
 
 
 Version 1.2.4
